data parser spec added and fix rubocop isssue

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,9 +3,10 @@ AllCops:
   DisabledByDefault: false
   Exclude:
     - 'bin/*'
-
-Style/StringLiterals:
-  EnforcedStyle: double_quotes
+    - '**/vendor/**/*'
 
 Documentation:
   Enabled: false
+
+Metrics/LineLength:
+  Max: 100
